# ai-resume-fixer

./: main.py  package.json  pyproject.toml
static/: script.js  style.css
templates/: about.html  contact.html  index.html  privacy.html
