[tool.poetry]
name = "ai-resume-fixer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.1.1"
gunicorn = "23.0.0"
requests = "2.32.4"
Flask-cors = "6.0.1"
tailwindcss = "4.1.0"
postcss = "8.5.6"
autoprefixer = "10.4.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
