[tool.poetry]
name = "ai-resume-fixer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "*"
gunicorn = "*"
requests = "*"
Flask-Cors = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
